[package]
name = "tasks-todo"
version = "0.1.6"
edition = "2021"
license = "BSD-2-Clause"
description = "Simple utility to manage stuff you are doing"
homepage = "https://github.com/Dr-42/task-scheduler"
repository = "https://github.com/Dr-42/task-scheduler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
serde_json = "1.0.108"
serde = { version = "1.0.108", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
axum-macros = "0.3.8"
tower = "0.4.4"
tower-http = { version = "0.4.4", features = ["cors"] }
markdown = "1.0.0-alpha.15"
async-fs = "2.1.0"
base64 = "0.21.5"
image = "0.24.7"
